PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add support for the syntree package via *pel-use-syntree*.
  When active use *syntree-new* (bound to ~<f11> D s~) to create new
  syntree diagrams.
- *⚠️  BREAKING CHANGE:* renamed *pel-elisp-activates-minor-modes*  to
  *pel-emacs-lisp-activates-minor-modes*.
  If you have set the old one inside your Emacs customization files,
  rename then variable (and re-order them).
- Add *pel-treesit-check-setup* command, bound to ~<f11> C-t ?~.  This command
  checks the validity of Emacs Tree-Sitter grammar language directory settings
  and print any detected issue as a warning.
- Add support for the atl-long-lines package.
  Add *atl-long-lines-mode* command, bound to ~<f11> l a~, provided by the
  atl-long-lines package, activated when the *pel-use-atl-long-lines* user
  option is on (*t*).
- Add *pel-hier-modes* command, bound to ~<f11> ? e h~.  This prints the hierarchy of major modes
  currently loaded inside a hierarchy-tablulated buffer.  The PEL code is a slight modification of
  the hierarchy-examples-major-modes.el written by Damien Cassou where I
  renamed the symbols to integrate his excellent example into PEL.
- Add support for several writing tools and a Writing Tools PDF. The tools are:
  - artbollocks-mode, activated by *pel-use-artbollocks-mode*,
  - harper-ls, activated by *pel-use-harper-ls*,
  - my-whisper, activated by *pel-use-my-whisper*,
  - wc-mode, activated by *pel-use-wc-mode*,
  - writegood-mode, activated by *pel-use-writegood-mode*,
  - writeroom-mode, activated by *pel-use-writeroom-mode*,
  - Update link to go-translate, activated by *pel-use-go-translate*; it was renamed gt by its author.
- Add support to Mode Line Scroll, mlscroll, when *pel-use-mlscroll* user-option is set to either t or to use-from-start.
- Add preliminary support for the Dart programming language.